--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -33,25 +34,31 @@ body {
     height: 15px;
 }
 
-#courses-container {
-    width: 450px;
-    height: 400px;
-    overflow-y: scroll;
+#course-container-wrap {
+    margin: 50px;
+}
 
+#courses-container {
     border: 5px soild black;
 }
 
-*::-webkit-scrollbar {
+#new-courses-wrap {
+    overflow-y: scroll;
+    width: 500px;
+    height: 400px;
+}
+
+#new-courses-wrap::-webkit-scrollbar {
     width: 15px;
 }
 
-*::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, .05);
+#new-courses-wrap::-webkit-scrollbar-track {
+    background-color: rgba(207, 34, 34, 0.05);
     -webkit-border-radius: 20px;
     border-radius: 20px;
 }
 
-*::-webkit-scrollbar-thumb {
+#new-courses-wrap::-webkit-scrollbar-thumb {
     -webkit-border-radius: 20px;
     border-radius: 20px;
     background: rgb(54, 49, 49);
@@ -59,19 +66,75 @@ body {
 
 .course-ref {
     display: grid;
-    grid-template-columns: 50px 50px 50px 50px;
-    gap: 50px;
-    
+    grid-template-columns: 230px 87px 100px;
+    margin-left: 40px;
+
+    font-size: 20px;
+    margin-bottom: 20px;
 }
 
 .new-course {
     display: flex;
-    
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 25px;
+}
 
+.input-txt {
+    padding: 10px;
+    font-size: 20px;
+    width: 200px;
+    border-radius: 10px;
+    height: 30px;
+}
+
+.input-cr {
+    height: 30px;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.grade {
+    height: 50px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: transparent;
+    font-size: 25px;
+}
+
+#add-course-btn {
+    margin-top: 30px;
+    width: 500px;
+    height: 50px;
+    border-radius: 10px;
+    font-size: 25px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+#cgpa-container-wrap {
+    width: 400px;
+    height: 400px;
     
+    border: 1px solid black;
+
+    display: flex;
+    gap: 50px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
 }
 
-#cgpa {
-   
+#calculate-btn {
+    width: 150px;
+    height: 50px;
+    border-radius: 10px;
+    font-size: 15px;
 }
